background image added

--- a/style.css
+++ b/style.css
@@ -99,5 +99,12 @@ footer {
 .event button:hover {
   background-color: #45a049;
 }
-
+body {
+  background-image:url('img.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* Optional: Fixed background */
+}
 /* Additional styles can be added based on your design preferences */
